NIFI-13965 Reduced duplicate code and made use of Java 21 features.